# Trading-Simulator

./: .gitignore  CMakeLists.txt  README.md
frontend/: package.json
frontend/src/: App.css  App.tsx
frontend/src/hooks/: useWS.ts
frontend/src/lib/: parse.ts
include/: bot.hpp  engine_queue.hpp  market_data.hpp  order_book.hpp  protocol.hpp
src/: App.css  App.tsx  CMakeLists.txt  bot.cpp  client.cpp  engine_queue.cpp  exchange.cpp  market_data.cpp  md_listen.cpp  order_book.cpp
tests/: CMakeLists.txt  test_order_book.cpp
ws-bridge/: index.html  package.json  server.js
